--- a/chat-app-backend/src/main/resources/application.properties
+++ b/chat-app-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=chat-app-backend
 # spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
-spring.data.mongodb.uri=mongodb://mongo:27017/chatdb
+spring.data.mongodb.uri=mongodb://mongo:27017/chatapp
 
