--- a/chat-app-backend/docker-compose.yml
+++ b/chat-app-backend/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   react-service:
     image: ajeet28/chat-front
     build:
-      context:  D:/ChatApp/chat-app-fronted
+      context:  .
       dockerfile: Dockerfile
     ports:
       - "5173:80"
