--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   boot-app:
     image: ajeet28/chat-app
     build:
-      context: .
+      context: ./chat-app-backend
       dockerfile: Dockerfile
     ports:
       - "8080:8080"  
@@ -29,7 +29,7 @@ services:
   react-service:
     image: ajeet28/chat-front
     build:
-      context:  .
+      context:  ./chat-app-fronted
       dockerfile: Dockerfile
     ports:
       - "5173:80"
